--- a/.env
+++ b/.env
@@ -1,1 +1,14 @@
+###> symfony/framework-bundle ###
+APP_ENV=dev
+APP_SECRET=289ac6c94ef8f32acd9d17a7aa86b619
+###< symfony/framework-bundle ###
+
 DATABASE_URL="postgresql://user:@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+
+###> symfony/messenger ###
+MESSENGER_TRANSPORT_DSN=doctrine://default
+###< symfony/messenger ###
+
+###> symfony/mailer ###
+MAILER_DSN=null://null
+###< symfony/mailer ###
